--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "homepage": "https://GreganGeorge.github.io/todolist/",
+  "homepage": "https://GreganGeorge.github.io/To-Do_List/",
   "name": "todo-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
